--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Jarrod Thompson</a>.
+    Coded by <a href="https://nft-preview-card-jt.netlify.app">Jarrod Thompson</a>.
   </div>
 </body>
 </html>
